bin_PROGRAMS     = eHdc
eHdc_SOURCES     = src/main.cpp src/eHdcParams.h src/Controller.h src/eHealth.h src/eHealth.cpp src/arduPi.h src/arduPi.cpp src/AbstractCollector.h src/AirflowCollector.h src/EcgCollector.h src/CollectorFactory.h src/BpmCollector.h src/OxygenCollector.h src/TemperatureCollector.h src/AbstractPulsioximeterCollector.h src/SkinConductanceCollector.h src/TimeSpan.h src/CsvWriter.h
EXTRA_DIST = scripts/* \
             arduino/*
